--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
